# spot_it

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
images/: README.md
output/: README.md
src/spot_it/: __main__.py  images.py  pdfs.py  projective_plane.py  randomization.py  spot_it.py  utils.py
src/tests/: test_floatrange.py
